# voice_audio

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  Pipfile  Readme.md  ecosystem.config.json  pyproject.toml  setup.cfg
voice/: __main__.py  arguments.py  chat_llm.py  contracts.py  settings.py  speaker.py  voice.py  voice_class.py  vosk_client.py  vosk_server.py
voice/apis/: client.py  entry_point.py  info.py  serve.py  server.pyw  speak.py
voice/apis/json_schemas/: voice.voice.__str__.json
voice/docker/: Dockerfile.base  Dockerfile.tts  diagnose_tts.ps1  install.ps1  piper-tts  run_tts.sh
voice/helpers/: collections.py  function_to_json.py  import_info.py  module_info.py  package_info.py  tree.py
voice/test/: testhelper.py
voice/test/data/: empty.txt  test_voice.yml
voice/test/test_ut/: test_voice.py
