[metadata]
name = voice
include_package_data = True
version = 0.0.5
description = btn project startup to be used wisely
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
author = Lars Mielke
author_email = info@while-ai.org
url = https://gitlab.com/larsmielke2/voice

[options]
py_modules = voice
install_requires = 
    colorama
    pyyaml
    requests
    tabulate
    pytest
packages = find:

[options.entry_points]
console_scripts =
    va = voice.__main__:main
